--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "scatter-plot",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://geist0504.github.io/scatter-plot/",
   "dependencies": {
     "d3": "^5.7.0",
+    "gh-pages": "^2.0.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "2.0.4"
@@ -11,6 +13,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
